logs/offboard_pkg/build.make.458.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In member function ‘bool MultiBody::FlightCircle_Time()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:354:35: error: no matching function for call to ‘TaskManager::publish_lla(Eigen::Vector3d&)’
  354 |             uav[i].publish_lla(lla);
      |                                   ^
In file included from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:1,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:98:10: note: candidate: ‘void TaskManager::publish_lla(Eigen::Vector3d&, bool)’
   98 |     void publish_lla(Eigen::Vector3d &pos, bool change_yaw);
      |          ^~~~~~~~~~~
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:98:10: note:   candidate expects 2 arguments, 1 provided
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:399: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
